--- a/Qualitivity/Sdl.Community.Qualitivity/PluginResources.resx
+++ b/Qualitivity/Sdl.Community.Qualitivity/PluginResources.resx
@@ -820,4 +820,38 @@ still associated with the client profile '{0}'</value>
   <data name="TellMe_Provider_Results" xml:space="preserve">
     <value>{0} results</value>
   </data>
+  <data name="Forum" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>Resources\Forum.ico;System.Drawing.Icon, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="SourceCode" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>Resources\SourceCode.ico;System.Drawing.Icon, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="TellmeDocumentation" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>Resources\TellmeDocumentation.ico;System.Drawing.Icon, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="Settings2" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>Resources\Settings2.ico;System.Drawing.Icon, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="SettingsAction_ExternalHelp_1" xml:space="preserve">
+    <value>For more information,</value>
+  </data>
+  <data name="SettingsAction_ExternalHelp_2" xml:space="preserve">
+    <value>click here</value>
+  </data>
+  <data name="SettingsAction_ExternalHelp_3" xml:space="preserve">
+    <value>for documentation.</value>
+  </data>
+  <data name="SettingsAction_Title_NewQualitivityProject" xml:space="preserve">
+    <value>New Qualitivity Project</value>
+  </data>
+  <data name="SettingsAction_ProjectAlreadyQualitivity" xml:space="preserve">
+    <value>The project you have selected has already been converted into a Qualitivity Project.
+Either select a different project to convert or to continue further either:
+ 
+1. Open the Qualitivity Project's file(s) in the Editor View.
+2. Or, in the Qualitivity View, select the Project's file(s) and export them into an MS Word document</value>
+  </data>
+  <data name="SettingsAction_NoQualitivityProjectSelected" xml:space="preserve">
+	  <value>No qualitivity project selected.</value>
+  </data>
 </root>
