Multilingual Excel File Type: Updated TellMe icon used for loading the settings action

--- a/Multilingual.Excel.FileType/Multilingual.Excel.FileType/PluginResources.resx
+++ b/Multilingual.Excel.FileType/Multilingual.Excel.FileType/PluginResources.resx
@@ -460,6 +460,6 @@
     <value>click here</value>
   </data>
   <data name="SettingsAction_ExternalHelp_3" xml:space="preserve">
-    <value>for documentation.</value>
+    <value>to view the documentation.</value>
   </data>
 </root>
