--- a/AmazonTranslateTradosPlugin/PluginResources.resx
+++ b/AmazonTranslateTradosPlugin/PluginResources.resx
@@ -187,9 +187,9 @@
   <data name="SettingsAction_NoProviderAvailable" xml:space="preserve">
     <value>We couldn't find an instance of Amazon Translate MT provider for the current project selected. To add it to your project, follow these steps:
 
-1. Open Project Settings;
-2. Go to Translation Memory and Automated Translation;
-3. Select Use;
-4. Via the dropdown menu locate Amazon Translate Trados Plugin.</value>
+1. Open Project Settings
+2. Go to Translation Memory and Automated Translation
+3. Select Use
+4. Via the dropdown menu locate Amazon Translate Trados Plugin</value>
   </data>
 </root>
