--- a/Multilingual.Excel.FileType/Multilingual.Excel.FileType/PluginResources.resx
+++ b/Multilingual.Excel.FileType/Multilingual.Excel.FileType/PluginResources.resx
@@ -443,15 +443,15 @@
     <value>Resources\TellmeDocumentation.ico;System.Drawing.Icon, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="SettingsAction_OpenOptionsText" xml:space="preserve">
-    <value>To configure this file type you need have it installed and listed. Follow these steps:
+    <value>The default settings for the File Type can be configured from the Options window.  To locate the default File Type settings, follow these steps:
 
-1. File - Options
-2. File Types - click on:  "Additional installed File Types exist"
-3. Select File Type
-4. OK to confirm</value>
+1. Open 'File > Options > File Types'
+2. Select the File Type from the list
+
+Tip: If you are adding a new File Type to an existing project, you should first select the link "Additional installed File Types exist" from 'Project Settings > File Types'</value>
   </data>
   <data name="SettingsAction_Title" xml:space="preserve">
-    <value>Configure FileType in Options</value>
+    <value>Configure File Type in Options</value>
   </data>
   <data name="SettingsAction_ExternalHelp_1" xml:space="preserve">
     <value>For more information,</value>
@@ -461,5 +461,8 @@
   </data>
   <data name="SettingsAction_ExternalHelp_3" xml:space="preserve">
     <value>to view the documentation.</value>
+  </data>
+  <data name="TellMeAppStoreForum" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>Resources\TellMe\TellMeAppStoreForum.ico;System.Drawing.Icon, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
 </root>
