--- a/TMX/PluginResources.resx
+++ b/TMX/PluginResources.resx
@@ -125,16 +125,12 @@
     <value>TMX File Type</value>
   </data>
   <data name="SettingsWarning" xml:space="preserve">
-    <value>To configure this file type, you need to have it installed and listed.
-Follow these steps:
+    <value>The default settings for the File Type can be configured from the Options window. To locate the default File Type settings, follow these steps:
 
-1. File - Options
-2. File Types - click on : "Additional installed File Types exist"
-3. Select File Type
-4. OK to confirm
+    1. Open 'File &gt; Options &gt; File Types'
+    2. Select the File Type from the list
 
-Once listed, select the file type from the list top configure as needed.
-Note: File Types need to be configured prior to project creation</value>
+Tip: If you are adding a new File Type to an existing project, you should first select the link "Additional installed File Types exist" from 'Project Settings &gt; File Types'.</value>
   </data>
   <data name="TellMe_Documentation" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>Resources\TellMe_Documentation.ico;System.Drawing.Icon, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
