--- a/Multilingual.XML.FileType/Multilingual.XML.FileType/PluginResources.resx
+++ b/Multilingual.XML.FileType/Multilingual.XML.FileType/PluginResources.resx
@@ -397,4 +397,36 @@
   <data name="Question" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>resources\question.ico;System.Drawing.Icon, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="TellmeDocumentation" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>Resources\TellmeDocumentation.ico;System.Drawing.Icon, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="SourceCode" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>Resources\SourceCode.ico;System.Drawing.Icon, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="Settings" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>Resources\Settings.ico;System.Drawing.Icon, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="SettingsAction_OpenOptionsText" xml:space="preserve">
+    <value>The default settings for the File Type can be configured from the Options window.  To locate the default File Type settings, follow these steps:
+
+    1. Open 'File &gt; Options &gt; File Types'
+    2. Select the File Type from the list
+
+Tip: If you are adding a new File Type to an existing project, you should first select the link "Additional installed File Types exist" from 'Project Settings &gt; File Types'</value>
+  </data>
+  <data name="SettingsAction_Title" xml:space="preserve">
+    <value>Configure FileType in Options</value>
+  </data>
+  <data name="SettingsAction_ExternalHelp_1" xml:space="preserve">
+    <value>For more information,</value>
+  </data>
+  <data name="SettingsAction_ExternalHelp_2" xml:space="preserve">
+    <value>click here</value>
+  </data>
+  <data name="SettingsAction_ExternalHelp_3" xml:space="preserve">
+    <value>to view the documentation.</value>
+  </data>
+  <data name="TellMeAppStoreForum" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>Resources\TellMe\TellMeAppStoreForum.ico;System.Drawing.Icon, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
 </root>
