--- a/Multilingual.XML.FileType/Multilingual.XML.FileType/PluginResources.resx
+++ b/Multilingual.XML.FileType/Multilingual.XML.FileType/PluginResources.resx
@@ -407,27 +407,26 @@
     <value>Resources\Settings.ico;System.Drawing.Icon, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="SettingsAction_OpenOptionsText" xml:space="preserve">
-    <value>To configure this file type you need have it installed and listed. Follow these steps:
+    <value>The default settings for the File Type can be configured from the Options window.  To locate the default File Type settings, follow these steps:
 
-1. File - Options
-2. File Types - click on:  "Additional installed File Types exist"
-3. Select File Type
-4. OK to confirm
+    1. Open 'File &gt; Options &gt; File Types'
+    2. Select the File Type from the list
 
-Once listed select the file type from the list to configure as needed.
-Note: File types need to be configured prior to project creation</value>
+Tip: If you are adding a new File Type to an existing project, you should first select the link "Additional installed File Types exist" from 'Project Settings &gt; File Types'</value>
   </data>
   <data name="SettingsAction_Title" xml:space="preserve">
     <value>Configure FileType in Options</value>
   </data>
-
-	<data name="SettingsAction_ExternalHelp_1" xml:space="preserve">
+  <data name="SettingsAction_ExternalHelp_1" xml:space="preserve">
     <value>For more information,</value>
   </data>
   <data name="SettingsAction_ExternalHelp_2" xml:space="preserve">
     <value>click here</value>
   </data>
   <data name="SettingsAction_ExternalHelp_3" xml:space="preserve">
-    <value>for documentation.</value>
+    <value>to view the documentation.</value>
+  </data>
+  <data name="TellMeAppStoreForum" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>Resources\TellMe\TellMeAppStoreForum.ico;System.Drawing.Icon, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
 </root>
