--- a/ApplyTMTemplate/Sdl.Community.ApplyTMTemplate/PluginResources.resx
+++ b/ApplyTMTemplate/Sdl.Community.ApplyTMTemplate/PluginResources.resx
@@ -353,9 +353,18 @@
     <value>Nothing processed yet</value>
   </data>
   <data name="Template_loading_error" xml:space="preserve">
-	  <value>Template loading error</value>
+    <value>Template loading error</value>
   </data>
   <data name="Please_specify_a_correct_template_path" xml:space="preserve">
-	  <value>Please specify a correct template path</value>
+    <value>Please specify a correct template path</value>
+  </data>
+  <data name="TellMe_Documentation" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>Resources\TellMe_Documentation.ico;System.Drawing.Icon, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="TellMe_Settings" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>Resources\TellMe_Settings.ico;System.Drawing.Icon, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="TellMe_SourceCode" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>Resources\TellMe_SourceCode.ico;System.Drawing.Icon, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
 </root>
