Copy Tags: Solved issues reported

--- a/CopyTags/CopyTags/PluginResources.resx
+++ b/CopyTags/CopyTags/PluginResources.resx
@@ -153,6 +153,6 @@
 
    1. Open a file in Editor
    2. Right click inside the segment which contains tags
-   3. Selecte "Copy Tags to Target"</value>
+   3. Select "Copy Tags to Target"</value>
   </data>
 </root>
